# amplifier-module-tool-mcp

./: .gitignore  2025-10-18-stop1.txt  COMPLETION_ROADMAP.md  CONTENT_SIZE_PROTECTION.md  CURRENT_STATUS.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  PHASE3_SUMMARY.md  README.md  SESSION_HANDOFF.md  pyproject.toml
ai_working/: 2025-10-28_mcp_integration_fixes.md
amplifier_module_tool_mcp/: __init__.py  client.py  config.py  content_utils.py  hooks.py  http_client.py  manager.py  prompt_wrapper.py  reconnection.py  resource_wrapper.py  streamable_http_client.py  wrapper.py
behaviors/: mcp.yaml
docs/: COMPLETION_ROADMAP.md  GAP_ANALYSIS.md  SDK_CAPABILITIES.md
docs/development/: END_TO_END_INTEGRATION.md  IMPLEMENTATION_STATUS.md  PHASE2_SUMMARY.md  PHASE4_SUMMARY.md
examples/: README.md  bundle-local-dev.md  bundle.md  example-mcp.md  mcp-example.md  mcp.json  profile-with-mcp.yaml
tests/: __init__.py  conftest.py  test_config.py  test_http_clients.py  test_http_integration.py  test_integration.py  test_prompts.py  test_reconnection.py  test_resources.py  test_wrapper.py
